# rock-paper-scissors-game

./: .gitattributes  .gitignore  API_DESIGN.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  FACTORY_AND_HUNTING_UPDATE.md  FILE_MANIFEST.md  GITHUB_SETUP_GUIDE.md  HUNTING_BEHAVIOR.md  INDEX.md  LICENSE  PROJECT_STATUS.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART.ro.md  QUICK_REFERENCE.md  README.md  README.ro.md  ROMANIAN_LANGUAGE_SUPPORT.md  RPS-plan.txt  SETUP.md  START_HERE.md  START_HERE.ro.md  USAGE_EXAMPLES.md  VISUAL_GUIDE.md  api_server.py  debug_victory.txt  install.bat  pyproject.toml  run.bat  run.py  run_tests.py  test.bat
.github/workflows/: python.yml
docs/: README.md  index.md  index.ro.md
rps/: __init__.py  app.py
rps/analysis/: __init__.py  logger.py
rps/api/: __init__.py  spawn_api.py  spawn_queue.py
rps/assets/: __init__.py  sprites.py
rps/core/: __init__.py  agent.py  collision.py  config.py  factory.py  language.py  names.py  world.py
rps/ui/: hud.py  victory_screen.py
tests/: __init__.py  test_agent.py  test_collision.py  test_factory.py  test_world.py
